name:                vctl
version:             0.1.0.0
synopsis:            Vertex Control Utility
description:         Please see README.md
homepage:            http://github.com/etcinit/vertex#readme
license:             MIT
license-file:        LICENSE
author:              Eduardo Trujillo
maintainer:          ed@chromabits.com
copyright:           Eduardo Trujillo 2016
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

executable vctl
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , text
                     , optparse-applicative
                     , turtle
                     , process
  default-language:    Haskell2010

test-suite vctl-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , vctl
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/etcinit/vctl
